# yaqle

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: Default.cmake  Tests.cmake  UseLATEX.cmake
inc/: dquat.hpp  matrix.hpp  quat.hpp  vector3d.hpp
src/: dquat.cpp  main.cpp  quat.cpp  vector3d.cpp
tests/: yaqle-tests.cpp  yaqle_tests.cpp
tests/dquat/: dquat_tests.cpp
tests/dquat/logic/: dquat_logic_tests.cpp
tests/matrix/: matrix_tests.cpp
tests/quat/: quat_tests.cpp
tools/: animate.py  notes.py  rotation.py
